--- a/Microservices/ShabbirDawoodi/OrderService/pom.xml
+++ b/Microservices/ShabbirDawoodi/OrderService/pom.xml
@@ -68,6 +68,11 @@
 			<artifactId>spring-cloud-starter-sleuth</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+		</dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
