--- a/Microservices/ShabbirDawoodi/OrderService/src/main/resources/application.yaml
+++ b/Microservices/ShabbirDawoodi/OrderService/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/orderdb
+    url: jdbc:mysql://${DB_HOST:localhost}:3306/orderdb
     username: root
     password:
     driverClassName: com.mysql.cj.jdbc.Driver
@@ -13,7 +13,7 @@ spring:
     hibernate:
       ddl-auto: update
   application:
-    name: Order-Service
+    name: ORDER-SERVICE
   config:
     import: configserver:http://localhost:9296
   security:
