--- a/Microservices/ShabbirDawoodi/PaymentService/src/main/resources/application.yaml
+++ b/Microservices/ShabbirDawoodi/PaymentService/src/main/resources/application.yaml
@@ -12,6 +12,6 @@ spring:
     hibernate:
       ddl-auto: update
   application:
-    name: Payment-Service
+    name: PAYMENT-SERVICE
   config:
     import: configserver:http://localhost:9296
