--- a/Microservices/ShabbirDawoodi/ProductService/src/main/resources/application.yaml
+++ b/Microservices/ShabbirDawoodi/ProductService/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/productdb
+    url: jdbc:mysql://${DB_HOST:localhost}:3306/productdb
     username: root
     password:
     driverClassName: com.mysql.cj.jdbc.Driver
@@ -13,7 +13,7 @@ spring:
     hibernate:
       ddl-auto: update
   application:
-    name: Product-Service
+    name: PRODUCT-SERVICE
   config:
     import: configserver:http://localhost:9296
 
