--- a/Microservices/ShabbirDawoodi/Spring3.1.1/ProductService/pom.xml
+++ b/Microservices/ShabbirDawoodi/Spring3.1.1/ProductService/pom.xml
@@ -70,10 +70,17 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>com.okta.spring</groupId>
 			<artifactId>okta-spring-boot-starter</artifactId>
 			<version>3.0.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.12.2</version>
 		</dependency>
 
 	</dependencies>
