--- a/Microservices/Kafka/kafka-tutorial/src/main/resources/application.yaml
+++ b/Microservices/Kafka/kafka-tutorial/src/main/resources/application.yaml
@@ -9,13 +9,15 @@ spring:
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
-        string:
+        spring:
           json:
             trusted:
               packages: "*"
-    #      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
     producer:
       bootstrap-servers: localhost:9092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
-#      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+    topic:
+      name: javaguides
+    topic-json:
+      name: javaguides_json
